style.css
/*test comment*/
:root{

}

html,
body {
  height: 100%;
  width: 100%;
  padding: 0;
  margin: 0;
  font-family: "Titillium Web", sans-serif;
  user-select: none !important;
}

body {
  display: flex;
  flex-direction: column;
}

h1 {
  text-align: center;
}

header,
footer {
  z-index: 1;
  background-color: #0a304e;
}

header,
footer,
.card {
  box-shadow: 0px 0px 15px gray;
}

header {
  height: 3%;
}

footer {
  height: 12%;
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-between;
}

footer > div {
  color: white;
  font-size: 5vh;
  font-weight: 500;
  margin: 32px;
  display: flex;
  align-items: center;
}

footer > div#date-time{
  color: white;
  font-size: 3.5vh;
  font-weight: lighter;
  margin: 32px;
  display: flex;
  justify-content: flex-start;
}

main {
  display: flex; 
  flex: auto;
  background-color: #ccc;
  justify-content:space-around;
  padding: 20px;
  gap: 20px;
  
}

.card {

  background-color: white;  /*flex basis: 25%*/
  z-index: 2;                  /*padding-left, padding-right: 0.25rem */
  flex: 1 1 auto; 
  padding: 10px;
  height: 99vh;
  width: 99vw; 
}

.card-content{
  height: 85%;
  width: 100%;
}

.google-slides{
  height: 100%;
  width: 100%;
}

.floor-1,
.floor-2,
.floor-3,
.floor-4,
.floor-5,
.floor-6,
.floor-7 {
  display: none;
}

.airtable-embed {
  height: 100% !important;
}

